2007-12-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keyboard.c (Fcommand_execute): Call Qcall_interactively instead of
	manipulating the backtrace manually.
	(make_lispy_event): Merge the ASCII and MULTIBYTE cases.
	(struct backtrace, backtrace_list): Remove.
	(command_loop_1): Remove dead var `no_direct'.

	* buffer.c (reset_buffer_local_variables): If permanent_too is 0, also
	preserve non-built-in buffer-local variables.
	(Fkill_all_local_variables): Don't re-create&re-set permanent
	buffer-local variables.

2007-12-09  Juri Linkov  <juri@jurta.org>

	* buffer.c (Frename_buffer): Change interactive spec from "s" to
	Lisp code that uses `read-buffer' with current buffer as default.

2007-12-08  Michael Albinus  <michael.albinus@gmx.de>

	* dbusbind.c (xd_read_message): Generate an event for every
	registered handler.  There might be several handlers registered
	for the same signal.
	(Fdbus_register_signal): Don't overwrite a registration for the
	same signal.  Add a new registration if handlers are different.
	(Vdbus_registered_functions_table): Rework doc string.

2007-12-07  Michael Albinus  <michael.albinus@gmx.de>

	* dbusbind.c (Fdbus_get_unique_name, xd_read_message)
	(Fdbus_register_signal): Use DBUS_MAXIMUM_NAME_LENGTH and
	DBUS_MAXIMUM_MATCH_RULE_LENGTH for string lengths.
	(Fdbus_call_method, Fdbus_send_signal, Fdbus_register_signal):
	Unify argument lists.
	(xd_read_message, Fdbus_register_signal) Reorder and extend event
	arguments and hash table keys.  Use unique name for service.
	(Fdbus_unregister_signal): Remove checks.
	(Vdbus_registered_functions_table): Fix doc string.

2007-12-05  Magnus Henoch  <mange@freemail.hu>

	* process.c (make_process): Initialize pty_flag to 0.

2007-12-05  Jason Rumney  <jasonr@gnu.org>

	* image.c (xbm_load) [WINDOWSNT]: Shuffle the bits of directly
	specified XBMs.

2007-12-05  Richard Stallman  <rms@gnu.org>

	* xdisp.c (syms_of_xdisp) <scroll-conservatively>: Doc fix.
